--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Listing Tweets</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Message</th>
@@ -16,6 +16,7 @@
       <tr>
         <td><%= tweet.message %></td>
         <td><%= tweet.user_id %></td>
+        <td><%= link_to tweet.user.username, user_profile_path(id: tweet.user.id) %></td>
         <td><%= link_to 'Show', tweet %></td>
         <td><%= link_to 'Edit', edit_tweet_path(tweet) %></td>
         <td><%= link_to 'Destroy', tweet, method: :delete, data: { confirm: 'Are you sure?' } %></td>
