--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <p>
   <strong>Message:</strong>
   <%= @tweet.message %>
@@ -7,7 +5,7 @@
 
 <p>
   <strong>User:</strong>
-  <%= @tweet.user.username %>
+  <%= link_to @tweet.user.username, user_profile_path(id: @tweet.user.id) %>
 </p>
 
 <%= link_to 'Edit', edit_tweet_path(@tweet) %> |
